      Command Line Tools or Xcode).

      To avoid many compilation warnings you may need to use
\preformatted{
	CC="clang -mmacos-version-min=13.3"
}

      That version of Accelerate provides LAPACK 3.9.1 rather than 3.2.1.

      Currently Accelerate is used for BLAS calls from C in R and package
      stats and for LAPACK calls from the \code{lapack} module.
    }
   }

  %% \subsection{PACKAGE INSTALLATION}{
  %%   \itemize{
  %%     \item .
  %%   }
  %% }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} notes when S4-style exports are used
      without declaring a strong dependence on package \pkg{methods}.

      \item \code{tools::checkRd()} (used by \command{R CMD check})
      detects more problems with \verb{\Sexpr}-based dynamic content,
      including bad nesting of \verb{\Sexpr}s and invalid arguments.

      \item \code{tools::checkRd()} now reports Rd titles and section
      names ending in a period; this is ignored by \command{R CMD check}
      unless environment variable \env{_R_CHECK_RD_CHECKRD_MINLEVEL_} is
      set to -5 or smaller.

      \item \command{R CMD check} now notes Rd files without an
      \verb{\alias}, as long documented in \sQuote{Writing R Extensions}
      §1.3.1.
      The check for a missing \verb{\description} has been moved from
      \code{tools::checkRd()} to \code{tools::checkRdContents()}.

      \item \command{R CMD check} now visits \file{inst/NEWS.Rd}
      when checking Rd files.

      \item \code{tools::checkDocFiles()} and
      \code{tools::checkRdContents()} now also check internal Rd files
      by default, but \dQuote{specially} (ignoring missing documentation
      of arguments).

      \item \command{R CMD Rdiff} gets option \option{--useEx}.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Headers \file{R_ext/Applic.h} and \file{R-ext/Linpack.h}
      included \file{R_ext/BLAS.h} although this was undocumented and